--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "secure_otp_backend",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.56.0",
     "husky": "^8.0.0",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "pretty-quick": "^4.0.0",
     "ts-node": "^10.9.2"
