--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "hpp": "^0.2.3"
+    "hpp": "^0.2.3",
+    "zod": "^3.23.5"
   }
 }
