--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,6 +11,12 @@ services:
     environment:
       - NODE_ENV=development
     command: npm run dev
+  redis:
+    image: redis/redis-stack:7.2.0-v10
+    networks:
+      - secure_otp-network
+    ports:
+      - ${REDIS_INSIGHT_EXPOSE_PORT}:8001
 
 networks:
   secure_otp-network:
