Setup for email done

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,12 @@ REDIS_EXPOSE_PORT=
 REDIS_HOST=
 REDIS_INSIGHT_EXPOSE_PORT=
 APP_NAME=
+OTP_EXP_TIME=
+
+# EMAIL RELATED
+EMAIL_HOST=
+EMAIL_SERVICE=
+EMAIL_PORT=
+EMAIL_SECURE=
+EMAIL_AUTH_USER=
+EMAIL_AUTH_PASSWORD=
