--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,14 @@ services:
       - REDIS_PORT=${REDIS_EXPOSE_PORT}
       - REDIS_HOST=${REDIS_HOST}
       - APP_NAME=${APP_NAME}
+      - OTP_EXP_TIME=${OTP_EXP_TIME}
+      - EMAIL_HOST=${EMAIL_HOST}
+      - EMAIL_SERVICE=${EMAIL_SERVICE}
+      - EMAIL_PORT=${EMAIL_PORT}
+      - EMAIL_SECURE=${EMAIL_SECURE}
+      - EMAIL_AUTH_USER=${EMAIL_AUTH_USER}
+      - EMAIL_AUTH_PASSWORD=${EMAIL_AUTH_PASSWORD}
+
     ports:
       - ${PORT}:${PORT}
     extra_hosts:
