Made otp counter init an env varibale

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - REDIS_HOST=${REDIS_HOST}
       - APP_NAME=${APP_NAME}
       - OTP_EXP_TIME=${OTP_EXP_TIME}
+      - OTP_COUNTER_INIT=${OTP_COUNTER_INIT}
       - OTP_COUNTER_INCREMENT=${OTP_COUNTER_INCREMENT}
       - EMAIL_HOST=${EMAIL_HOST}
       - EMAIL_SERVICE=${EMAIL_SERVICE}
