--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - EMAIL_SECURE=${EMAIL_SECURE}
       - EMAIL_AUTH_USER=${EMAIL_AUTH_USER}
       - EMAIL_AUTH_PASSWORD=${EMAIL_AUTH_PASSWORD}
+      - OTP_MAX_ATTEMPTS=${OTP_MAX_ATTEMPTS}
+      
 
     ports:
       - ${PORT}:${PORT}
