--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,7 @@ APP_NAME=
 OTP_EXP_TIME=
 OTP_COUNTER_INIT=
 OTP_COUNTER_INCREMENT=
-OTP_MAX_ATTEMPTS=3
+OTP_MAX_ATTEMPTS=
 
 # EMAIL RELATED
 EMAIL_HOST=
