--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,30 +8,27 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=${PORT}
-      - REDIS_PORT=${REDIS_EXPOSE_PORT}
       - REDIS_HOST=${REDIS_HOST}
       - APP_NAME=${APP_NAME}
       - OTP_EXP_TIME=${OTP_EXP_TIME}
       - OTP_COUNTER_INIT=${OTP_COUNTER_INIT}
       - OTP_COUNTER_INCREMENT=${OTP_COUNTER_INCREMENT}
+      - OTP_MAX_ATTEMPTS=${OTP_MAX_ATTEMPTS}
       - EMAIL_HOST=${EMAIL_HOST}
       - EMAIL_SERVICE=${EMAIL_SERVICE}
       - EMAIL_PORT=${EMAIL_PORT}
       - EMAIL_SECURE=${EMAIL_SECURE}
       - EMAIL_AUTH_USER=${EMAIL_AUTH_USER}
       - EMAIL_AUTH_PASSWORD=${EMAIL_AUTH_PASSWORD}
-      - OTP_MAX_ATTEMPTS=${OTP_MAX_ATTEMPTS}
     ports:
       - ${PORT}:${PORT}
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     depends_on:
       - redis
   redis:
     container_name: secure_otp-redis
     restart: always
     ports:
-      - ${REDIS_EXPOSE_PORT}:6379
+      - ${REDIS_EXPOSE_PORT:-6379}:6379
     volumes:
       - ./DATA/REDIS_DATA:/data
     environment:
